Working path replacement and options

--- a/rails_panel/options.html
+++ b/rails_panel/options.html
@@ -51,6 +51,11 @@
                 (<a href="http://devnet.jetbrains.com/servlet/JiveServlet/download/5477503-17455/RubyMine%20Url%20Handler.zip" target="_blank">requires rubymine url handler</a>)
             </small>
         </label>
+        <legend>Working directory</legend>
+        <label>Find what:</label>
+        <input type="text" name="storage.work_find_what" ng-model="work_find_what">
+        <label>Replace with:</label>
+        <input type="text" name="storage.work_replace_with" ng-model="work_replace_with">
       </form>
       <div class="footer">Developed by <a href="http://rors.org" target="_blank">Dejan Simic</a></div>
     </div>
